<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/MaterialComponent"
    tools:context=".a_login.A5_SignInWithMailAndPassword">

    <ImageView
        android:id="@+id/a5_iv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/a1_splash_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/a5_til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:counterEnabled="true"
        app:endIconDrawable="@drawable/ic_clear"
        app:endIconMode="custom"
        app:helperText="@string/helperTextLoginOrRegister"
        app:helperTextTextColor="@color/teal_700"
        app:startIconDrawable="@drawable/ic_email">

        <EditText
            android:id="@+id/a5_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:helperText="@string/helperTextLoginOrRegister"
        app:helperTextTextColor="@color/teal_700"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_lock">

        <EditText
            android:id="@+id/a5_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/a5_bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="12dp"
        android:text="@string/login"
        android:textAllCaps="false"
        app:cornerRadius="100dp" />

    <TextView
        android:id="@+id/a5_btn_sign_in_with_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/new_user_sign_up_here"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/a5_btn_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/forgot_password"
        android:textAlignment="center" />
</LinearLayout>