<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".a_login.A2_ChooseLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/a2_imgView_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/a1_description_logo"
            app:srcCompat="@drawable/a1_splash_logo" />

        <TextView
            android:id="@+id/a2_tv_welcome_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/welcome_word"
            android:textColor="#1b1b1b" />

        <TextView
            android:id="@+id/a2_tv_sign_in_to_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sign_in_to_continue"
            android:textColor="#9e9e9e" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/a2_btn_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/iconfont_email_24"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/connexion_avec_email_et_password"
            android:textAllCaps="false"
            android:textColor="#1b1b1b" />

        <Button
            android:id="@+id/a2_btn_login_with_wechat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/iconfont_wechat_24"
            android:drawablePadding="10dp"
            android:text="@string/connexion_avec_wechat_et_password"
            android:textAllCaps="false"
            android:textColor="#1b1b1b" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:id="@+id/a2_btn_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="#40BFFF" />

        <TextView
            android:id="@+id/a2_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_user_sign_up_here"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>