<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/MaterialComponent"
    tools:context=".a_login.A6_ForgotPassword">

    <TextView
        android:id="@+id/a6_tv_hint_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/require_mail" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/a6_til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:counterEnabled="true"
        app:endIconDrawable="@drawable/ic_clear"
        app:endIconMode="custom"
        app:helperText="@string/helperTextLoginOrRegister"
        app:helperTextTextColor="@color/teal_700"
        app:startIconDrawable="@drawable/ic_email">

        <EditText
            android:id="@+id/a6_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/a6_btn_reset_passe_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="12dp"
        android:text="@string/send_passeword_reset_email"
        android:textAllCaps="false"
        app:cornerRadius="100dp" />

</LinearLayout>