<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/MaterialComponent"
    tools:context=".a_login.A3_RegisterWithMail">

    <androidx.cardview.widget.CardView
        android:id="@+id/e1_cv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/purple_700"
        app:cardCornerRadius="42dp">

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="#FFF9F9F9"
            app:cardCornerRadius="40dp">

            <ImageView
                android:id="@+id/user_avatar_profil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/add_avatar"
                android:scaleType="center"
                app:srcCompat="@drawable/a3_camera_sign_on" />

        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/l02_til_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:endIconMode="clear_text"
        app:helperText="@string/helperTextLoginOrRegister"
        app:helperTextTextColor="@color/teal_700"
        app:startIconDrawable="@drawable/ic_account">

        <EditText
            android:id="@+id/l02_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/l02_til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:counterEnabled="true"
        app:endIconDrawable="@drawable/ic_clear"
        app:endIconMode="custom"
        app:helperText="@string/helperTextLoginOrRegister"
        app:helperTextTextColor="@color/teal_700"
        app:startIconDrawable="@drawable/ic_email">

        <EditText
            android:id="@+id/l02_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:helperText="@string/helperTextLoginOrRegister"
        app:helperTextTextColor="@color/teal_700"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_lock">

        <EditText
            android:id="@+id/l02_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/l02_bt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="12dp"
        android:text="@string/register"
        android:textAllCaps="false"
        app:cornerRadius="100dp" />

    <TextView
        android:id="@+id/btn_login_on_register_with_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/already_user_login_here"
        android:textAlignment="center" />

</LinearLayout>